force-app/main/default/objects/sked__Activity_Resource__c/sked__Activity_Resource__c.object-meta.xml
<CustomObject>
    <description>Allows multiple resources to be attached to an activity</description>
    <label>Activity Resource</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Activity Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>