force-app/main/default/objects/sked__Activity_Resource__c/fields/sked__Activity__c.field-meta.xml
<CustomField>
    <fullName>sked__Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>sked__Activity__c</referenceTo>
    <relationshipLabel>Activity Resources</relationshipLabel>
    <relationshipName>Activity_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>