force-app/main/default/objects/sked__Activity_Resource__c/fields/sked__Resource__c.field-meta.xml
<CustomField>
    <fullName>sked__Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>sked__Resource__c</referenceTo>
    <relationshipLabel>Activity Resources</relationshipLabel>
    <relationshipName>Activity_Resources</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>