force-app/main/default/objects/sked__Activity_Resource__c/fields/sked_Drive_Shift_Trade__c.field-meta.xml
<CustomField>
    <fullName>sked_Drive_Shift_Trade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drive Shift Trade</label>
    <referenceTo>sked_Drive_Shift_Trade__c</referenceTo>
    <relationshipLabel>Activity Resources</relationshipLabel>
    <relationshipName>sked_Activity_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>