force-app/main/default/objects/sked__Activity_Resource__c/fields/sked_Duration__c.field-meta.xml
<CustomField>
    <fullName>sked_Duration__c</fullName>
    <formula>ROUND(((sked_End__c - sked_Start1__c) * 1440),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>