force-app/main/default/objects/sked__Activity_Resource__c/fields/sked_Inherited_From_Drive__c.field-meta.xml
<CustomField>
    <fullName>sked_Inherited_From_Drive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to mark Activity Resources that are created because of a drive link</description>
    <label>Inherited From Drive</label>
    <type>Checkbox</type>
</CustomField>