force-app/main/default/objects/sked__Activity_Resource__c/fields/sked_Replacement_For__c.field-meta.xml
<CustomField>
    <fullName>sked_Replacement_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement For</label>
    <referenceTo>sked__Activity_Resource__c</referenceTo>
    <relationshipLabel>Activity Resources</relationshipLabel>
    <relationshipName>sked_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>