force-app/main/default/objects/sked__Activity_Resource__c/fields/sked_Start1__c.field-meta.xml
<CustomField>
    <fullName>sked_Start1__c</fullName>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>