force-app/main/default/objects/sked__Activity_Resource__c/fields/sked_Start__c.field-meta.xml
<CustomField>
    <fullName>sked_Start__c</fullName>
    <formula>sked__Activity__r.sked__Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start (Obsoleted)</label>
    <type>DateTime</type>
</CustomField>