force-app/main/default/objects/sked__Activity_Resource__c/fields/sked_Timezone__c.field-meta.xml
<CustomField>
    <fullName>sked_Timezone__c</fullName>
    <formula>sked__Resource__r.sked__Primary_Region__r.sked__Timezone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>