force-app/main/default/objects/sked__Activity_Resource__c/fields/sked_UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>sked_UniqueKey__c</fullName>
    <formula>sked__Activity__c + &apos;:&apos; +  sked__Resource__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueKey</label>
    <type>Text</type>
</CustomField>